<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestModeActivity"
    android:background="@color/backgroundDark">
    <ImageView
        android:layout_width="450dp"
        android:layout_height="230dp"
        android:background="@drawable/rectangle_lightblue_top">
    </ImageView>

    <LinearLayout
        android:id="@+id/testword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_keyboard_arrow_left_black_24dp">
        </TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEST"
            android:textColor="@color/textWhite"
            android:fontFamily="@font/nunitosemibold"
            android:textSize="27dp"
            android:layout_marginLeft="100dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/testword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/backgroundbluelight"
                android:layout_margin="10dp"
                android:layout_width="170dp"
                android:layout_height="230dp">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circlefull"
                    android:layout_marginTop="170dp"
                    android:layout_marginLeft="100dp">
                </TextView>
                <LinearLayout
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode1name"
                        android:textSize="27dp"
                        android:textColor="@color/textWhite"
                        android:fontFamily="@font/nunitosemibold">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode1des"
                        android:textSize="17dp"
                        android:textColor="@color/textWhite"
                        android:fontFamily="@font/nunitolight">
                    </TextView>

                    <Button
                        android:id="@+id/mode1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/ic_play_arrow_black_24dp"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="10dp">
                    </Button>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/backgroundPurple"
                android:layout_margin="10dp"
                android:layout_width="170dp"
                android:layout_height="230dp">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circlefull"
                    android:layout_marginTop="170dp"
                    android:layout_marginLeft="100dp">
                </TextView>
                <LinearLayout
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode2name"
                        android:textSize="27dp"
                        android:textColor="@color/textWhite"
                        android:fontFamily="@font/nunitosemibold">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode2des"
                        android:textSize="17dp"
                        android:textColor="@color/textWhite"
                        android:fontFamily="@font/nunitolight">
                    </TextView>

                    <TextView
                        android:id="@+id/mode2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/ic_play_arrow_black_24dp"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="10dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/backgroundOrange"
                android:layout_margin="10dp"
                android:layout_width="170dp"
                android:layout_height="230dp">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circlefull"
                    android:layout_marginTop="170dp"
                    android:layout_marginLeft="100dp">
                </TextView>
                <LinearLayout
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode3name"
                        android:textSize="27dp"
                        android:textColor="@color/textWhite"
                        android:fontFamily="@font/nunitosemibold">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode3des"
                        android:textSize="17dp"
                        android:textColor="@color/textWhite"
                        android:fontFamily="@font/nunitolight">
                    </TextView>

                    <TextView
                        android:id="@+id/mode3"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/ic_play_arrow_black_24dp"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="10dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/backgroundPearl"
                android:layout_margin="10dp"
                android:layout_width="170dp"
                android:layout_height="230dp">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circlefull"
                    android:layout_marginTop="170dp"
                    android:layout_marginLeft="100dp">
                </TextView>
                <LinearLayout
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode4name"
                        android:textSize="27dp"
                        android:textColor="@color/textWhite"
                        android:fontFamily="@font/nunitosemibold">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode4des"
                        android:textSize="17dp"
                        android:textColor="@color/textWhite"
                        android:fontFamily="@font/nunitolight">
                    </TextView>

                    <TextView
                        android:id="@+id/mode4"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/ic_play_arrow_black_24dp"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="10dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>