<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultScreen"
    android:background="@color/backgroundDark">

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="450dp"
        android:layout_height="530dp"
        android:background="@drawable/card_round_corner_bluelight_result">
    </ImageView>
    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="450dp"
        android:layout_height="370dp"
        android:background="@drawable/card_round_corner_purple_result">
    </ImageView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="-50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="450dp"
        android:layout_height="200dp"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/backgroundLight">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/pow"
            android:layout_marginLeft="220dp">
        </ImageView>
        <ImageView
            android:layout_marginLeft="10dp"
            android:rotationY="180"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/pow">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/result_title"
        android:elevation="2dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result"
        android:fontFamily="@font/nunitosemibold"
        android:textColor="@color/textWhite"
        android:textSize="43dp">
    </TextView>
    <TextView
        android:layout_marginTop="110dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_title"
        android:text="Your practice result are: "
        android:textSize="27dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/nunitosemibold"
        android:textColor="@color/textWhite">
    </TextView>

    <LinearLayout
        android:layout_below="@id/result_title"
        android:layout_marginTop="130dp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:rotation="90"
            android:layout_marginLeft="110dp"
            android:layout_width="60dp"
            android:layout_height="150dp"
            android:background="@drawable/line_white">
        </ImageView>
        <ImageView
            android:rotation="90"
            android:layout_marginLeft="105dp"
            android:layout_width="60dp"
            android:layout_height="150dp"
            android:background="@drawable/line_white">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/result_title"
        android:layout_marginTop="170dp">
        <TextView
            android:textAlignment="center"
            android:id="@+id/correct_count"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="3/9"
            android:textSize="27dp"
            android:textColor="@color/textWhite"
            android:fontFamily="@font/nunitosemibold">
        </TextView>
        <TextView
            android:layout_marginLeft="17dp"
            android:textAlignment="center"
            android:id="@+id/time_count"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/time_count"
            android:textColor="@color/textWhite"
            android:textSize="27dp"
            android:fontFamily="@font/nunitosemibold">
        </TextView>
        <TextView
            android:id="@+id/point_count"
            android:layout_marginLeft="15dp"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/point_count"
            android:textColor="@color/textWhite"
            android:textSize="27dp"
            android:fontFamily="@font/nunitosemibold">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/result_up"
        android:layout_marginTop="-20dp">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct"
            android:textSize="27dp"
            android:textColor="@color/textWhite"
            android:fontFamily="@font/nunitolight">
        </TextView>
        <TextView
            android:layout_marginLeft="85dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/textWhite"
            android:textSize="27dp"
            android:fontFamily="@font/nunitolight">
        </TextView>
        <TextView
            android:layout_marginLeft="85dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textColor="@color/textWhite"
            android:textSize="27dp"
            android:fontFamily="@font/nunitolight">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="75dp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_down"
        android:orientation="vertical"
        android:id="@+id/learning_reminder">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Learning Reminder"
            android:textSize="27dp"
            android:textColor="@color/textWhite"
            android:fontFamily="@font/nunitosemibold">
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notify me to practice within: "
                android:textSize="24dp"
                android:textColor="@color/textWhite"
                android:fontFamily="@font/nunitolight">
            </TextView>
            <Spinner
                android:background="@color/backgroundPurple"
                android:id="@+id/week_spinner"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I don't want to be notify"
                android:textColor="@color/textWhite"
                android:fontFamily="@font/nunitolight"
                android:textSize="17dp"
                android:layout_marginLeft="50dp">
            </TextView>
            <Button
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/box_uncheck"
                android:layout_marginLeft="15dp">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/learning_reminder"
        android:id="@+id/result_streak"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You have done"
            android:textSize="35dp"
            android:fontFamily="@font/nunitosemibold"
            android:textColor="@color/textWhite">
        </TextView>

        <TextView
            android:id="@+id/row_result"
            android:layout_marginTop="-20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:textSize="69dp"
            android:fontFamily="@font/nunitosemibold"
            android:textColor="@color/backgroundOrange">
        </TextView>

        <TextView
            android:layout_marginTop="-20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="in a row"
            android:textSize="27dp"
            android:fontFamily="@font/nunitolight"
            android:textColor="@color/textWhite">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/result_streak">
        <Button
            android:id="@+id/result_button_continue"
            android:text="continue"
            android:textColor="@color/textWhite"
            android:textSize="17dp"
            android:fontFamily="@font/nunitosemibold"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/card_round_corner_orange_result">
        </Button>

        <Button
            android:id="@+id/result_button_finish"
            android:text="finish"
            android:textColor="@color/textWhite"
            android:textSize="17dp"
            android:fontFamily="@font/nunitosemibold"
            android:layout_marginLeft="30dp"
            android:background="@drawable/result_corner_gray"
            android:layout_width="170dp"
            android:layout_height="50dp">
        </Button>
    </LinearLayout>
</RelativeLayout>